analysis/src/parser/.antlr/ScoreLangParser.java
// Generated from d:/Program/Projects/ScoreAnalysis/analysis/src/parser/ScoreLang.gram by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ScoreLangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		At=1, KeySet=2, Lpar=3, MAJOR=4, MINOR=5, Rpar=6, TempoSet=7, Number=8, 
		TimeSet=9, Slash=10, TitleSet=11, StringLit=12, Track=13, Lbrace=14, Rbrace=15, 
		Instrument=16, InstList=17, Section=18, Repeat=19, Bar=20, Rest=21, Lbrack=22, 
		Rbrack=23, ChordQuality=24, ChordAlter=25, NoteName=26, Accidental=27, 
		For=28, Dot=29;
	public static final int
		RULE_score = 0, RULE_global = 1, RULE_key_control = 2, RULE_tempo_control = 3, 
		RULE_time_control = 4, RULE_title_control = 5, RULE_track = 6, RULE_instrumentAssign = 7, 
		RULE_section = 8, RULE_repeatAssign = 9, RULE_measure = 10, RULE_event = 11, 
		RULE_note = 12, RULE_rest = 13, RULE_chord = 14, RULE_chord_symbol = 15, 
		RULE_chord_quality = 16, RULE_pitch = 17, RULE_pitchClass = 18, RULE_duration = 19, 
		RULE_local_control = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"score", "global", "key_control", "tempo_control", "time_control", "title_control", 
			"track", "instrumentAssign", "section", "repeatAssign", "measure", "event", 
			"note", "rest", "chord", "chord_symbol", "chord_quality", "pitch", "pitchClass", 
			"duration", "local_control"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "At", "KeySet", "Lpar", "MAJOR", "MINOR", "Rpar", "TempoSet", "Number", 
			"TimeSet", "Slash", "TitleSet", "StringLit", "Track", "Lbrace", "Rbrace", 
			"Instrument", "InstList", "Section", "Repeat", "Bar", "Rest", "Lbrack", 
			"Rbrack", "ChordQuality", "ChordAlter", "NoteName", "Accidental", "For", 
			"Dot"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ScoreLang.gram"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ScoreLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ScoreContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ScoreLangParser.EOF, 0); }
		public List<GlobalContext> global() {
			return getRuleContexts(GlobalContext.class);
		}
		public GlobalContext global(int i) {
			return getRuleContext(GlobalContext.class,i);
		}
		public List<TrackContext> track() {
			return getRuleContexts(TrackContext.class);
		}
		public TrackContext track(int i) {
			return getRuleContext(TrackContext.class,i);
		}
		public ScoreContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_score; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScoreLangListener ) ((ScoreLangListener)listener).enterScore(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScoreLangListener ) ((ScoreLangListener)listener).exitScore(this);
		}
	}

	public final ScoreContext score() throws RecognitionException {
		ScoreContext _localctx = new ScoreContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_score);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==At) {
				{
				{
				setState(42);
				global();
				}
				}
				setState(47);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(49); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(48);
				track();
				}
				}
				setState(51); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==Track );
			setState(53);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GlobalContext extends ParserRuleContext {
		public TerminalNode At() { return getToken(ScoreLangParser.At, 0); }
		public Key_controlContext key_control() {
			return getRuleContext(Key_controlContext.class,0);
		}
		public Tempo_controlContext tempo_control() {
			return getRuleContext(Tempo_controlContext.class,0);
		}
		public Time_controlContext time_control() {
			return getRuleContext(Time_controlContext.class,0);
		}
		public Title_controlContext title_control() {
			return getRuleContext(Title_controlContext.class,0);
		}
		public GlobalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_global; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScoreLangListener ) ((ScoreLangListener)listener).enterGlobal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScoreLangListener ) ((ScoreLangListener)listener).exitGlobal(this);
		}
	}

	public final GlobalContext global() throws RecognitionException {
		GlobalContext _localctx = new GlobalContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_global);
		try {
			setState(63);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(55);
				match(At);
				setState(56);
				key_control();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(57);
				match(At);
				setState(58);
				tempo_control();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(59);
				match(At);
				setState(60);
				time_control();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(61);
				match(At);
				setState(62);
				title_control();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Key_controlContext extends ParserRuleContext {
		public TerminalNode KeySet() { return getToken(ScoreLangParser.KeySet, 0); }
		public TerminalNode Lpar() { return getToken(ScoreLangParser.Lpar, 0); }
		public PitchClassContext pitchClass() {
			return getRuleContext(PitchClassContext.class,0);
		}
		public TerminalNode Rpar() { return getToken(ScoreLangParser.Rpar, 0); }
		public TerminalNode MAJOR() { return getToken(ScoreLangParser.MAJOR, 0); }
		public TerminalNode MINOR() { return getToken(ScoreLangParser.MINOR, 0); }
		public Key_controlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_key_control; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScoreLangListener ) ((ScoreLangListener)listener).enterKey_control(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScoreLangListener ) ((ScoreLangListener)listener).exitKey_control(this);
		}
	}

	public final Key_controlContext key_control() throws RecognitionException {
		Key_controlContext _localctx = new Key_controlContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_key_control);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			match(KeySet);
			setState(66);
			match(Lpar);
			setState(67);
			pitchClass();
			setState(68);
			_la = _input.LA(1);
			if ( !(_la==MAJOR || _la==MINOR) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(69);
			match(Rpar);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Tempo_controlContext extends ParserRuleContext {
		public TerminalNode TempoSet() { return getToken(ScoreLangParser.TempoSet, 0); }
		public TerminalNode Lpar() { return getToken(ScoreLangParser.Lpar, 0); }
		public TerminalNode Number() { return getToken(ScoreLangParser.Number, 0); }
		public TerminalNode Rpar() { return getToken(ScoreLangParser.Rpar, 0); }
		public Tempo_controlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tempo_control; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScoreLangListener ) ((ScoreLangListener)listener).enterTempo_control(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScoreLangListener ) ((ScoreLangListener)listener).exitTempo_control(this);
		}
	}

	public final Tempo_controlContext tempo_control() throws RecognitionException {
		Tempo_controlContext _localctx = new Tempo_controlContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_tempo_control);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			match(TempoSet);
			setState(72);
			match(Lpar);
			setState(73);
			match(Number);
			setState(74);
			match(Rpar);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Time_controlContext extends ParserRuleContext {
		public TerminalNode TimeSet() { return getToken(ScoreLangParser.TimeSet, 0); }
		public TerminalNode Lpar() { return getToken(ScoreLangParser.Lpar, 0); }
		public List<TerminalNode> Number() { return getTokens(ScoreLangParser.Number); }
		public TerminalNode Number(int i) {
			return getToken(ScoreLangParser.Number, i);
		}
		public TerminalNode Slash() { return getToken(ScoreLangParser.Slash, 0); }
		public TerminalNode Rpar() { return getToken(ScoreLangParser.Rpar, 0); }
		public Time_controlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_time_control; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScoreLangListener ) ((ScoreLangListener)listener).enterTime_control(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScoreLangListener ) ((ScoreLangListener)listener).exitTime_control(this);
		}
	}

	public final Time_controlContext time_control() throws RecognitionException {
		Time_controlContext _localctx = new Time_controlContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_time_control);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(TimeSet);
			setState(77);
			match(Lpar);
			setState(78);
			match(Number);
			setState(79);
			match(Slash);
			setState(80);
			match(Number);
			setState(81);
			match(Rpar);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Title_controlContext extends ParserRuleContext {
		public TerminalNode TitleSet() { return getToken(ScoreLangParser.TitleSet, 0); }
		public TerminalNode Lpar() { return getToken(ScoreLangParser.Lpar, 0); }
		public TerminalNode StringLit() { return getToken(ScoreLangParser.StringLit, 0); }
		public TerminalNode Rpar() { return getToken(ScoreLangParser.Rpar, 0); }
		public Title_controlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_title_control; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScoreLangListener ) ((ScoreLangListener)listener).enterTitle_control(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScoreLangListener ) ((ScoreLangListener)listener).exitTitle_control(this);
		}
	}

	public final Title_controlContext title_control() throws RecognitionException {
		Title_controlContext _localctx = new Title_controlContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_title_control);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(TitleSet);
			setState(84);
			match(Lpar);
			setState(85);
			match(StringLit);
			setState(86);
			match(Rpar);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TrackContext extends ParserRuleContext {
		public TerminalNode Track() { return getToken(ScoreLangParser.Track, 0); }
		public TerminalNode StringLit() { return getToken(ScoreLangParser.StringLit, 0); }
		public TerminalNode Lbrace() { return getToken(ScoreLangParser.Lbrace, 0); }
		public TerminalNode Rbrace() { return getToken(ScoreLangParser.Rbrace, 0); }
		public InstrumentAssignContext instrumentAssign() {
			return getRuleContext(InstrumentAssignContext.class,0);
		}
		public List<SectionContext> section() {
			return getRuleContexts(SectionContext.class);
		}
		public SectionContext section(int i) {
			return getRuleContext(SectionContext.class,i);
		}
		public TrackContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_track; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScoreLangListener ) ((ScoreLangListener)listener).enterTrack(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScoreLangListener ) ((ScoreLangListener)listener).exitTrack(this);
		}
	}

	public final TrackContext track() throws RecognitionException {
		TrackContext _localctx = new TrackContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_track);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(Track);
			setState(89);
			match(StringLit);
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Instrument) {
				{
				setState(90);
				instrumentAssign();
				}
			}

			setState(93);
			match(Lbrace);
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Section) {
				{
				{
				setState(94);
				section();
				}
				}
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(100);
			match(Rbrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstrumentAssignContext extends ParserRuleContext {
		public TerminalNode Instrument() { return getToken(ScoreLangParser.Instrument, 0); }
		public TerminalNode Lpar() { return getToken(ScoreLangParser.Lpar, 0); }
		public TerminalNode InstList() { return getToken(ScoreLangParser.InstList, 0); }
		public TerminalNode Rpar() { return getToken(ScoreLangParser.Rpar, 0); }
		public InstrumentAssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instrumentAssign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScoreLangListener ) ((ScoreLangListener)listener).enterInstrumentAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScoreLangListener ) ((ScoreLangListener)listener).exitInstrumentAssign(this);
		}
	}

	public final InstrumentAssignContext instrumentAssign() throws RecognitionException {
		InstrumentAssignContext _localctx = new InstrumentAssignContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_instrumentAssign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(Instrument);
			setState(103);
			match(Lpar);
			setState(104);
			match(InstList);
			setState(105);
			match(Rpar);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SectionContext extends ParserRuleContext {
		public TerminalNode Section() { return getToken(ScoreLangParser.Section, 0); }
		public TerminalNode StringLit() { return getToken(ScoreLangParser.StringLit, 0); }
		public TerminalNode Lbrace() { return getToken(ScoreLangParser.Lbrace, 0); }
		public TerminalNode Rbrace() { return getToken(ScoreLangParser.Rbrace, 0); }
		public RepeatAssignContext repeatAssign() {
			return getRuleContext(RepeatAssignContext.class,0);
		}
		public List<MeasureContext> measure() {
			return getRuleContexts(MeasureContext.class);
		}
		public MeasureContext measure(int i) {
			return getRuleContext(MeasureContext.class,i);
		}
		public SectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_section; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScoreLangListener ) ((ScoreLangListener)listener).enterSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScoreLangListener ) ((ScoreLangListener)listener).exitSection(this);
		}
	}

	public final SectionContext section() throws RecognitionException {
		SectionContext _localctx = new SectionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_section);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(Section);
			setState(108);
			match(StringLit);
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Repeat) {
				{
				setState(109);
				repeatAssign();
				}
			}

			setState(112);
			match(Lbrace);
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 74448898L) != 0)) {
				{
				{
				setState(113);
				measure();
				}
				}
				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(119);
			match(Rbrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RepeatAssignContext extends ParserRuleContext {
		public TerminalNode Repeat() { return getToken(ScoreLangParser.Repeat, 0); }
		public TerminalNode Lpar() { return getToken(ScoreLangParser.Lpar, 0); }
		public TerminalNode Number() { return getToken(ScoreLangParser.Number, 0); }
		public TerminalNode Rpar() { return getToken(ScoreLangParser.Rpar, 0); }
		public RepeatAssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_repeatAssign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScoreLangListener ) ((ScoreLangListener)listener).enterRepeatAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScoreLangListener ) ((ScoreLangListener)listener).exitRepeatAssign(this);
		}
	}

	public final RepeatAssignContext repeatAssign() throws RecognitionException {
		RepeatAssignContext _localctx = new RepeatAssignContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_repeatAssign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(Repeat);
			setState(122);
			match(Lpar);
			setState(123);
			match(Number);
			setState(124);
			match(Rpar);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MeasureContext extends ParserRuleContext {
		public TerminalNode Bar() { return getToken(ScoreLangParser.Bar, 0); }
		public List<EventContext> event() {
			return getRuleContexts(EventContext.class);
		}
		public EventContext event(int i) {
			return getRuleContext(EventContext.class,i);
		}
		public MeasureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_measure; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScoreLangListener ) ((ScoreLangListener)listener).enterMeasure(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScoreLangListener ) ((ScoreLangListener)listener).exitMeasure(this);
		}
	}

	public final MeasureContext measure() throws RecognitionException {
		MeasureContext _localctx = new MeasureContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_measure);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 73400322L) != 0)) {
				{
				{
				setState(126);
				event();
				}
				}
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(132);
			match(Bar);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EventContext extends ParserRuleContext {
		public NoteContext note() {
			return getRuleContext(NoteContext.class,0);
		}
		public RestContext rest() {
			return getRuleContext(RestContext.class,0);
		}
		public ChordContext chord() {
			return getRuleContext(ChordContext.class,0);
		}
		public Local_controlContext local_control() {
			return getRuleContext(Local_controlContext.class,0);
		}
		public EventContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_event; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScoreLangListener ) ((ScoreLangListener)listener).enterEvent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScoreLangListener ) ((ScoreLangListener)listener).exitEvent(this);
		}
	}

	public final EventContext event() throws RecognitionException {
		EventContext _localctx = new EventContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_event);
		try {
			setState(138);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NoteName:
				enterOuterAlt(_localctx, 1);
				{
				setState(134);
				note();
				}
				break;
			case Rest:
				enterOuterAlt(_localctx, 2);
				{
				setState(135);
				rest();
				}
				break;
			case Lbrack:
				enterOuterAlt(_localctx, 3);
				{
				setState(136);
				chord();
				}
				break;
			case At:
				enterOuterAlt(_localctx, 4);
				{
				setState(137);
				local_control();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NoteContext extends ParserRuleContext {
		public PitchContext pitch() {
			return getRuleContext(PitchContext.class,0);
		}
		public DurationContext duration() {
			return getRuleContext(DurationContext.class,0);
		}
		public NoteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_note; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScoreLangListener ) ((ScoreLangListener)listener).enterNote(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScoreLangListener ) ((ScoreLangListener)listener).exitNote(this);
		}
	}

	public final NoteContext note() throws RecognitionException {
		NoteContext _localctx = new NoteContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_note);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			pitch();
			setState(141);
			duration();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RestContext extends ParserRuleContext {
		public TerminalNode Rest() { return getToken(ScoreLangParser.Rest, 0); }
		public DurationContext duration() {
			return getRuleContext(DurationContext.class,0);
		}
		public RestContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rest; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScoreLangListener ) ((ScoreLangListener)listener).enterRest(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScoreLangListener ) ((ScoreLangListener)listener).exitRest(this);
		}
	}

	public final RestContext rest() throws RecognitionException {
		RestContext _localctx = new RestContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_rest);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(Rest);
			setState(144);
			duration();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ChordContext extends ParserRuleContext {
		public TerminalNode Lbrack() { return getToken(ScoreLangParser.Lbrack, 0); }
		public Chord_symbolContext chord_symbol() {
			return getRuleContext(Chord_symbolContext.class,0);
		}
		public TerminalNode Slash() { return getToken(ScoreLangParser.Slash, 0); }
		public PitchContext pitch() {
			return getRuleContext(PitchContext.class,0);
		}
		public TerminalNode Rbrack() { return getToken(ScoreLangParser.Rbrack, 0); }
		public DurationContext duration() {
			return getRuleContext(DurationContext.class,0);
		}
		public ChordContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chord; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScoreLangListener ) ((ScoreLangListener)listener).enterChord(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScoreLangListener ) ((ScoreLangListener)listener).exitChord(this);
		}
	}
